--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <div>O número secreto é maior <i class="fa-sharp fa-solid fa-arrow-up"></i></div>
     </div>
     
+    <script src="/app/sortearNumero.js"></script>
 </body>
 </html>
