--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <h3>O número secreto está entre <span>0</span> e <span>100</span> </h3>
 
     <div id="chute" class="mensagem">
-        <div>Você disse:</div>
+<!--    <div>Você disse:</div>
         <span class="box">20</span>
-        <div>O número secreto é maior <i class="fa-sharp fa-solid fa-arrow-up"></i></div>
+        <div>O número secreto é maior <i class="fa-sharp fa-solid fa-arrow-up"></i></div> -->
     </div>
     
     <script src="/app/sortearNumero.js"></script>
+    <script src="/app/reconhecimentoDeVoz.js"></script>
+    <script src="/app/validacao.js"></script>
 </body>
 </html>
